kube/3-deploy/2-apps/gotosocial/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app gotosocial
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # ingress controller
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - {}
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow Postgres default cluster
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: pg-default
            io.kubernetes.pod.namespace: pg
      toPorts:
        - ports:
            - port: "5432"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app gotosocial
  namespace: pg
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: pg-default
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: *app
            io.kubernetes.pod.namespace: *app
      toPorts:
        - ports:
            - port: "5432"
